--- a/class/webpage/css/baskinrabins.css
+++ b/class/webpage/css/baskinrabins.css
@@ -55,11 +55,16 @@
   right:0;
 }
 
+.nav-wrap{
+  position:relative;
+}
+
 .nav{
   height:47px;
   border-top:1px solid #e2d9d6;
-  border-bottom:2px solid #3f291a;
+  border-bottom:1px solid #3f291a;
   position:relative;
+  z-index:10;
 }
 
 .nav-member{
@@ -85,9 +90,9 @@
 }
 
 .nav-member-link.join{
-                width:27px;
-                background-position:-97px 0;
-              }
+  width:27px;
+background-position:-97px 0;
+}
 
 .nav-member-link.logout{
   width:47px;
@@ -102,7 +107,6 @@
 
 .gnb{
   float:right;
-  margin-top:17px;
 }
 
 .gnb-depth1-item{
@@ -137,42 +141,43 @@
   text-indent:-99999em;
   height:12px;
   background:url(../images/gnb_menu.png) no-repeat;
+  padding:17px 0 18px;
 }
 
 .gnb-depth1-link.flavor{
   width:164px;
-  background-position:-133px 0;
+  background-position:-133px 17px;
 }
 
 .gnb-depth1-link.menu{
   width:41px;
-  background-position:-416px 0;
+  background-position:-416px 17px;
 }
 
 .gnb-depth1-link.event{
   width:43px;
-  background-position:-576px 0;
+  background-position:-576px 17px;
 }
 
 .gnb-depth1-link.store{
   width:42px;
-  background-position:-737px 0;
+  background-position:-737px 17px;
 }
 
 .gnb-depth1-link.about{
   width:50px;
-  background-position:-896px 0;
+  background-position:-896px 17px;
 }
 
 .gnb-depth2{
   position:absolute;
-  margin-top:60px;
+  margin-top:40px;
   z-index:10;
   display:none;
 }
 
 .gnb-depth2.img{
-  margin-top:20px;
+  margin-top:0;
 }
 
 .gnb-depth2-item{
@@ -187,12 +192,12 @@
 .gnb-bg{
   background:#fff;
   width:100%;
-  height:274px;
+  /*height:274px;*/
+  height:0;
   position:absolute;
-  top:49px;
+  top:48px;
   left:0;
   border-bottom:1px solid #3f291a;
-  display:none;
 }
 
 .btn-search{
@@ -204,6 +209,219 @@
   border:0;
   cursor:pointer;
 }
+
+.banner-top{
+  display:block;
+  height:150px;
+  text-indent:-99999em;
+  background:#54bdec url(../images/img_flaovr_month_top.jpg) no-repeat 50% 0;
+  margin-bottom:3px;
+}
+
+.banner-bottom{
+  display:block;
+  height:697px;
+  text-indent:-99999em;
+  background:#f0eb1d url(../images/img_main_banner_2.jpg) no-repeat 50% 0;
+}
+
+.br-event-heading{
+  width:87px;
+  height:14px;
+  text-indent:-99999em;
+  background:url(../images/h_event.png) no-repeat;
+  margin:100px auto 50px;
+}
+
+.event-list:after{
+  content:"";
+  display:block;
+  clear:both;
+}
+
+.event-list-item{
+  float:left;
+  margin-right:16px;
+  width:288px;
+}
+
+.event-list-item.last{
+  margin-right:0;
+}
+
+/* 가상 selector 쓰는 방법 */
+
+/*
+  1. last-child
+
+.event-list-item:last-child{
+  margin-right:0;
+}
+
+  2. first-child
+
+.event-list-item{
+  float:left;
+  margin-left:16px;
+}
+
+.event-list-item:first-child{
+  margin-left:0;
+}
+
+*/
+
+
+.event-list-item .event-item-module .event-item-title img{
+  width:288px;
+}
+
+.event-item-text{
+  margin-top:20px;
+}
+
+/* 가상 selector 쓰는 방법 2  */
+
+/*
+
+  3. nth-child
+
+*/
+.event-item-text:nth-child(3){
+  height:54px;
+  font-size:17px;
+  line-height:1.6;
+  word-break: break-all;
+  text-align:justify;
+}
+
+.event-item-text:nth-child(3) a{
+  color:#000;
+}
+
+.ir-store-event{
+  width:114px;
+  height:22px;
+  text-indent:-99999em;
+  background:url(../images/stit_store.gif) no-repeat;
+}
+
+.ir-happy-event{
+  width:148px;
+  height:22px;
+  text-indent:-99999em;
+  background:url(../images/stit_happypoint.gif) no-repeat;
+}
+
+.menu-list{
+  width:1200px;
+  height:1065px;
+  text-indent:-99999em;
+  background:url(../images/img_menu_list.png) no-repeat;
+}
+
+.br-menu-heading{
+  width:84px;
+  height:14px;
+  text-indent:-99999em;
+  background:url(../images/h_menu.png) no-repeat 0 78px;
+  padding:78px 0 0;
+  margin:0 auto;
+}
+
+.br-menu{
+  margin-top:100px;
+  background:url(../images/bg_menu.jpg) no-repeat 50% 0;
+}
+
+.br-store-heading{
+  width:87px;
+  height:14px;
+  text-indent:-99999em;
+  background:url(../images/h_store.png) no-repeat 0 95px;
+  padding:95px 0 50px;
+  margin:0 auto;
+}
+
+.happy-order-heading{
+  width:244px;
+  height:14px;
+  text-indent:-99999em;
+  background:url(../images/h_happyorder_delivery.png) no-repeat 0 95px;
+  padding:95px 0 50px;
+  margin:0 auto;
+}
+
+.br-store,
+.happy-order{
+  width:600px;
+  float:left;
+}
+
+.br-store-link{
+  display:block;
+  width:600px;
+  height:260px;
+  text-indent:-99999em;
+  background:url(../images/img_store.jpg) no-repeat;
+}
+
+.happy-order-link{
+  display:block;
+  width:600px;
+  height:260px;
+  text-indent:-99999em;
+  background:url(../images/img_happyorder_delivery.jpg) no-repeat;
+}
+
+.snsbox-heading{
+  width:36px;
+  height:13px;
+  text-indent:-99999em;
+  background:url(../images/h_sns.png) no-repeat 0 95px;
+  padding:95px 0 50px;
+  margin:0 auto;
+}
+
+.snsbox-list{
+  width:328px;
+  margin:0 auto 35px;
+}
+.snsbox-list-item{
+  float:left;
+  margin:0 10px;
+}
+
+.insta-list-item{
+  float:left;
+  width:200px;
+  height:200px;
+}
+
+.insta-list-item img{
+  width:200px;
+  height:200px;
+}
+
+
+.clearfix:after{
+  content:"";
+  display:block;
+  clear:both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
