--- a/class/webpage/css/dothome.css
+++ b/class/webpage/css/dothome.css
@@ -63,6 +63,44 @@
   background:#0e68ab;
 }
 
+.gnb-depth2{
+  display:none;
+  position:absolute;
+  width:198px;
+  border:1px solid #ccc;
+  background:#fff;
+  padding:5px 0;
+}
+
+.gnb-depth2-link{
+  display:block;
+  padding:3px 20px;
+  font-size:14px;
+  line-height:1.6;
+  color:#999;
+}
+
+.gnb-depth2-link:hover{
+  color:#000;
+}
+
+.join-member{
+  width:470px;
+  padding:14px;
+  border:1px solid #e3e3e3;
+  background:#f5f5f5;
+  margin:0 auto;
+}
+
+.section-heading{
+  display:none;
+}
+
+.form-wrap{
+  padding:15px;
+  border:1px solid #ddd;
+  background:#fff;
+}
 
 
 
