--- a/class/webpage/css/dothome.css
+++ b/class/webpage/css/dothome.css
@@ -90,6 +90,7 @@
   border:1px solid #e3e3e3;
   background:#f5f5f5;
   margin:0 auto;
+  border-radius:6px;
 }
 
 .section-heading{
@@ -100,11 +101,106 @@
   padding:15px;
   border:1px solid #ddd;
   background:#fff;
+  border-radius:6px;
+}
+
+.blind{
+  display:none;
+}
+
+.input-text{
+  display:block;
+  height:34px;
+  border:1px solid #ccc;
+  padding-left:10px;
+  font-size:12px;
+  box-sizing:border-box;
+}
+
+.width-id{
+  width:358px;
+}
+
+.width-half{
+  width:50%;
+}
+
+.width-full{
+  width:100%;
+}
+
+.btn{
+  display:block;
+  background:#147AC6;
+  color:#fff;
+  border:0;
+}
+
+.btn-overlap{
+  width:80px;
+  height:34px;
+}
+
+.form-desc{
+  color:#ababab;
+  font-size:11px;
+  font-weight:bold;
+  padding-bottom:10px;
+  /*margin-bottom:15px;*/
+  /*border-bottom:1px solid #ddd;*/
+  position:relative;
+  display:inline-block;
+  padding-right:15px;
+}
+
+.form-desc:after{
+  content:"";
+  display:block;
+  width:8px;
+  height:11px;
+  background:url(../images/arrow.gif) no-repeat;
+  position:absolute;
+  top:0;
+  right:0;
 }
 
 
 
+.top-border{
+  border-top:1px solid #ddd;
+  padding-top:15px;
+}
 
+.mid-margin-bottom{
+  margin-bottom:10px;
+}
+
+.left-float{
+  float:left;
+}
+
+.right-float{
+  float:right;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #147AC6;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #147AC6;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #147AC6;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #147AC6;
+}
+
+.clearfix{
+  content:"";
+  display:block;
+  clear:both;
+}
 
 
 
