--- a/class/webpage/css/dothome.css
+++ b/class/webpage/css/dothome.css
@@ -5,8 +5,13 @@
 }
 
 .header{
+  width:100%;
   height:85px;
   padding-bottom:7px;
+  position:fixed;
+  top:0;
+  left:0;
+  background:#fff;
 }
 
 .logo{
@@ -36,9 +41,13 @@
 }
 
 .nav{
+  width:100%;
   height:36px;
   padding:1px;
   background:#2b3e4f;
+  position:fixed;
+  top:92px;
+  left:0;
 }
 
 .nav-heading{
@@ -89,7 +98,7 @@
   padding:14px;
   border:1px solid #e3e3e3;
   background:#f5f5f5;
-  margin:0 auto;
+  margin:180px auto 500px;
   border-radius:6px;
 }
 
@@ -129,11 +138,24 @@
   width:100%;
 }
 
+.width-sms{
+  width:70%;
+}
+
+.width-email{
+  width:200px;
+}
+
 .btn{
   display:block;
-  background:#147AC6;
+  background:#0e68ab;
   color:#fff;
   border:0;
+  cursor:pointer;
+}
+
+.btn:hover{
+  background:#147AC6;
 }
 
 .btn-overlap{
@@ -163,11 +185,6 @@
   right:0;
 }
 
-.top-border{
-  border-top:1px solid #ddd;
-  padding-top:15px;
-}
-
 */
 
 
@@ -188,9 +205,75 @@
   background:url(../images/arrow.gif) no-repeat;
 }
 
+.top-border{
+  border-top:1px solid #ddd;
+  padding-top:15px;
+}
 
+.email-mark{
+  display:block;
+  width:38px;
+  height:34px;
+  border:1px solid #ccc;
+  box-sizing:border-box;
+  font-size:14px;
+  color:#555;
+  text-align:center;
+  line-height:30px;
+  background:#eee;
+}
 
+.center-text{
+  text-align:center;
+}
 
+.check-label{
+  font-size:11px;
+}
+
+.chk-box{
+  margin:0;
+  vertical-align:middle;
+}
+
+.check-wrap:last-child{
+  margin-left:10px;
+}
+
+.msg-box{
+  width:100%;
+  height:36px;
+  border:1px solid #ddd;
+  text-align:center;
+  line-height:36px;
+  font-weight:bold;
+  font-size:11px;
+  margin-top:15px;
+  background:#f9f9f9;
+  box-sizing:border-box;
+}
+
+.terms-chk-box{
+  width:100%;
+  padding:20px;
+  box-sizing:border-box;
+  border:1px solid #ddd;
+  margin-top:20px;
+}
+
+.chk-item{
+  display:inline-block;
+  width:49%;
+  height:40px;
+  line-height:40px;
+}
+
+.btn-join{
+  width:100%;
+  height:45px;
+  font-size:18px;
+  margin-top:20px;
+}
 
 .mid-margin-bottom{
   margin-bottom:10px;
