--- a/class/webpage/css/sunmoon.css
+++ b/class/webpage/css/sunmoon.css
@@ -109,7 +109,50 @@
 
 .search{
   float:left;
+  margin:4px 0 0 10px;
 }
+
+.search-heading{
+  display:none;
+}
+
+.search-input{
+  width:125px;
+  height:24px;
+  background:#dedede;
+  border:1px solid #cacaca;
+  border-right:0;
+  float:left;
+  box-sizing:border-box;
+  font-size:11px;
+  padding-left:5px;
+}
+
+.search-button{
+  float:left;
+  display:block;
+  width:24px;
+  height:24px;
+  text-indent:-99999em;
+  box-sizing:border-box;
+  border:1px solid #cacaca;
+  border-left:0;
+  background:#dedede url(../images/btn_search.png) no-repeat 0 2px;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #333;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #333;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #333;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #333;
+}
+
 
 
 
