--- a/class/webpage/css/sunmoon.css
+++ b/class/webpage/css/sunmoon.css
@@ -153,6 +153,40 @@
   color: #333;
 }
 
+.top-visual{
+  width:100%;
+  height:158px;
+  background:url(../images/sub_visual01.jpg) no-repeat 50% 0;
+  position:relative;
+}
+
+.top-visual h2{
+  position:absolute;
+  left:50%;
+  margin:60px 0 0 -130px;
+}
+
+.slogan-1{
+  font-size:18px;
+  color:#fff;
+}
+
+.slogan-2{
+  font-size:40px;
+  color:#000;
+  margin-top:10px;
+}
+
+.lnb{
+  width:237px;
+  margin-right:42px;
+  float:left;
+}
+
+.contents{
+  width:815px;
+  float:left;
+}
 
 
 
@@ -171,4 +205,8 @@
 
 
 
-
+.clearfix:after{
+  content:"";
+  display:block;
+  clear:both;
+}
