--- a/class/webpage/css/sunmoon.css
+++ b/class/webpage/css/sunmoon.css
@@ -183,6 +183,29 @@
   float:left;
 }
 
+.lnb>h2{
+  font-size:20px;
+  background:#09619e;
+  color:#fff;
+  padding:0 20px;
+  height:60px;
+  line-height:56px;
+  font-weight:bold;
+}
+
+.lnb ul li a{
+  display:block;
+  box-sizing:border-box;
+  height:38px;
+  border:1px solid #e5e7e8;
+  border-top:0;
+  padding-left:15px;
+  font-size:15px;
+  line-height:38px;
+  font-weight:bold;
+  background:#f0f5f6 url(../images/blt_arrow1_2.gif) no-repeat 210px 12px;
+}
+
 .contents{
   width:815px;
   float:left;
@@ -204,6 +227,9 @@
 
 
 
+.mt36{
+  margin-top:36px;
+}
 
 .clearfix:after{
   content:"";
