--- a/mobis/css/style.css
+++ b/mobis/css/style.css
@@ -58,6 +58,15 @@ a{
 
 /* end of reset */
 
+
+
+
+
+
+
+
+
+
 /* 공통 */
 
 .fix-width{
@@ -95,7 +104,92 @@ a{
 /* header */
 
 .header{
-  display:none;
+  height:90px;
+  position:relative;
+  z-index:900;
+}
+
+.logo{
+  float:left;
+}
+
+.logo>a{
+  display:block;
+  width:190px;
+  height:90px;
+  text-indent:-99999em;
+  background:url(../images/sprite_image_01.png) no-repeat 0 21px;
+}
+
+.gnb{
+  float:right;
+  position:relative;
+  right:-42px;
+}
+
+.gnb-depth1{
+  margin-top:8px;
+}
+
+.gnb-depth1-item{
+  float:left;
+  width:180px;
+  text-align:center;
+  padding:30px 0 0;
+  background:#f6f6e8 url(../images/gnbBg.png) no-repeat;
+  position:relative;
+}
+
+.gnb-depth1-item:nth-child(1){
+  right:-68px;
+}
+
+.gnb-depth1-item:nth-child(2){
+  right:-45px;
+}
+
+.gnb-depth1-item:nth-child(3){
+  right:-23px;
+}
+
+.gnb-depth1-link{
+  display:inline-block;
+  height:16px;
+  text-indent:-99999em;
+  background:url(../images/sprite_image_01.png) no-repeat;
+}
+
+.gnb-depth1-item:nth-child(1) .gnb-depth1-link{
+  width:94px;
+  background-position:-200px 1px;
+}
+
+.gnb-depth1-item:nth-child(2) .gnb-depth1-link{
+  width:94px;
+  background-position:-200px -25px;
+}
+
+.gnb-depth1-item:nth-child(3) .gnb-depth1-link{
+  width:57px;
+  background-position:-200px -51px;
+}
+
+.gnb-depth1-item:nth-child(4) .gnb-depth1-link{
+  width:97px;
+  background-position:-200px -77px;
+}
+
+.gnb-depth2{
+  padding:53px 0 25px;
+}
+
+.gnb-depth2-item{
+  padding:0 0 15px 0;
+}
+
+.gnb-depth2-link{
+  font-size:14px;
+  color:#666;
 }
 
 /* //header */
